--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@
         body {font-family: monospace, sans-serif;margin: 0;padding: 0;background-color: #3a3a3a;color: #ffffff;
         background-size: cover;}
         .button { background-color: #222; border-radius: 4px;border-style: none;box-sizing: border-box;
-            color: #fff;cursor: pointer; display: inline-block; font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
+            color: #fff;cursor: pointer; display: inline-block; font-family: "monospace","Helvetica Neue",Arial,sans-serif;
             font-size: 16px;font-weight: 700;line-height: 1.5;margin: 0;max-width: 100px;min-height: 44px;min-width: 10px;
             outline: none;overflow: hidden;padding: 9px 20px 8px;position: relative;text-align: center;text-transform: none;
             user-select: none;-webkit-user-select: none;touch-action: manipulation;width: 100%;}
@@ -16,7 +16,7 @@
     </style>
 </head>
 
-<body><h1>Cam's Coffee</h1>
+<body><h1>Cam's Instant Coffee</h1>
     <p>GPIO 26 - State " + output26State + "</p>
     <p><a href=\"/26/on\"><button class="button" role="button">OFF</button></a></p>
     <p><a href=\"/26/off\"><button style ="background-color: #4CAF50;" class= "button" role="button">ON</button></a></p>
